fixed footer logo not being aligned to the center

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -347,6 +347,9 @@
     text-align: center;
 
     .footer__logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin-bottom: 3rem;
     }
 
@@ -372,10 +375,6 @@
   }
 
 }
-
-
-
-
 
 /* Mobile Menu Classes */
 
